--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  /* For not copy these styles in all components, we can use @layer components */
+  .heroButton {
+    @apply px-3 py-1 md:px-6 md:py-2 border border-[#242424] rounded-full uppercase text-xs tracking-widest text-gray-500 transition-all hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40;
+  }
+}
